--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,16 +24,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation "com.mikepenz:materialdrawer:6.1.2"
+    implementation 'com.github.florent37:viewtooltip:1.2.2'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation "androidx.annotation:annotation:1.1.0"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'cc.cloudist.acplibrary:library:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation  "android.arch.work:work-runtime:1.0.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'
@@ -42,10 +44,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'org.apache.commons:commons-text:1.8'
     implementation 'org.riversun:okhttp3-cookie-helper:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
     implementation 'com.github.kevinsawicki:http-request:6.0'
     implementation project(path: ':datepicker')
